<resources>
    <string name="app_name">Task Management App</string>
    <string name="task_list">Task List</string>
    <string name="calender">Calender</string>
    <string name="new_task">New Task</string>
    <string name="login">Login</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="emailTxtBox">email...</string>
    <string name="passwordTxtBox">password...</string>
    <string name="loginBtn">LOGIN</string>
    <string name="registerSignUpBtn">REGISTER NOW</string>
    <string name="registerWelcome">Welcome to NAME</string>
    <string name="registerBtn">REGISTER</string>
    <string name="name">Name:</string>
    <string name="nameTxtBox">name...</string>
    <string name="taskTitle">Task Title</string>
    <string name="titleTxtBox">Enter Task Title</string>
    <string name="taskDesc">Task Description</string>
    <string name="descTxtBox">Enter Task Description</string>
    <string name="taskDate">Task Date and Time</string>
    <string name="dateTxtBox">Set Due Date</string>
    <string name="priority">Set Task Priority</string>
    <string name="lowPriority">Low</string>
    <string name="medPriority">Medium</string>
    <string name="highPriority">High</string>
    <string name="saveTask">SAVE</string>

</resources>